--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@octokit/rest": "^18.5.2"
+    "@octokit/rest": "^18.5.2",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
   }
 }
