--- a/github-api/package.json
+++ b/github-api/package.json
@@ -3,16 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "server": "nodemon ./bin/www",
+    "client": "PORT=3500 npm start --prefix ../github-front",
+    "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "concurrently": "^6.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "morgan": "~1.9.1",
-    "node-dev": "^7.0.0"
+    "node-dev": "^7.0.0",
+    "nodemon": "^2.0.7"
   }
 }
